--- a/package.json
+++ b/package.json
@@ -9,16 +9,48 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.3",
+    "@emotion-icons/heroicons-solid": "^3.18.0",
+    "@headlessui/react": "^1.7.7",
+    "@openzeppelin/contracts": "^4.8.0",
+    "alchemy-sdk": "^2.2.5",
+    "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
+    "formi": "^0.4.0",
+    "formik": "^2.2.9",
+    "hardhat-ethers": "^1.0.1",
     "next": "13.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-blockies": "^1.4.1",
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.1",
+    "web3modal": "^1.9.10"
   },
   "devDependencies": {
-    "@types/node": "18.11.17",
+    "@nomicfoundation/hardhat-chai-matchers": "1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "2.0.0",
+    "@nomiclabs/hardhat-ethers": "2.0.0",
+    "@nomiclabs/hardhat-etherscan": "3.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@typechain/ethers-v5": "10.1.0",
+    "@typechain/hardhat": "6.1.2",
+    "@types/chai": "4.2.0",
+    "@types/mocha": "9.1.0",
+    "@types/node": "^18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "add": "^2.0.6",
+    "chai": "4.2.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
-    "typescript": "4.9.4"
+    "ethers": "5.4.7",
+    "hardhat": "2.11.1",
+    "hardhat-gas-reporter": "1.0.8",
+    "solidity-coverage": "0.8.0",
+    "ts-node": "^10.9.1",
+    "typechain": "8.1.0",
+    "typescript": "^4.9.4",
+    "yarn": "^1.22.19"
   }
 }
